Wed Oct 27 12:29:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/index.html:
          Added x.8.3

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Updated for x.8.3

        * bin/make_release.py:
          Generate spaces and removed some not needed excludes

        * bin/generate_rel_manpages:
          Print a message when we are ready

Wed Oct 27 10:38:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ChangeLog:
        * NEWS:
          Updated for next release

Wed Oct 27 12:01:05 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

       * ACE version 5.8.3 released.

Tue Oct 26 11:21:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Fixed DANCE_ROOT, could cause problems with the test stats email

Mon Oct 25 21:01:02 UTC 2010  Olli Savia  <ops@iki.fi>

        * NEWS:
          Updated.

Mon Oct 25 14:07:15 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Gestalt.cpp:
          Another fix to error processing behavior. If the result of
          process_directives() was > 0, that value was replaced by the
          result of process_commandline_directives(), which is contrary to
          the expected behavior. Now the result is the sum of these to
          return values, unless either returns -1, then the result is just
          -1.

Mon Oct 25 06:30:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op_T.h:
        * ace/Auto_IncDec_T.h:
          Doxygen changes

Sun Oct 24 12:35:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Event_Handler.h:
        * ace/Reactor.h:
        * ace/Reactor_Notification_Strategy.h:
        * ace/Read_Buffer.h:
        * ace/Registry_Name_Space.h:
        * ace/Remote_Tokens.h:
          Doxygen changes

Fri Oct 22 11:19:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Reactor.h:
          Doxygen changes
