@@ -6,5 +6,5 @@ Maintainer: Johnny Willemsen  <jwillemsen@remedy.nl>
 Architecture: any
 Build-Depends: gcc, make, g++, debhelper (>= 5), libssl-dev (>= 0.9.7d), dpatch (>= 2.0.10), libxt-dev (>= 4.3.0), libfltk1.1-dev (>= 1.1.4), libqt4-dev (>= 4.4~rc1-4), tk-dev (>= 8.4.7), zlib1g-dev, docbook-to-man, bzip2, autoconf, automake, libtool, autotools-dev, doxygen, graphviz
 Files:
- 65b34001c9605f056713a7e146b052d1 46346654 ACE+TAO+CIAO-src-5.8.3.tar.gz
+ 4134710026ea1aec5debdf24ab0f0364 43752510 ACE+TAO+CIAO-src-5.8.3.tar.gz
 
