@@ -3,7 +3,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
 <HEAD>
-  <TITLE>Obtaining ACE, TAO and CIAO</TITLE>
+  <TITLE>Obtaining ACE, TAO, CIAO and DAnCE</TITLE>
 </HEAD>
 
 <BODY
@@ -11,9 +11,9 @@
  bgColor="#ffffff">
 
 <HR>
-  <H3>Obtaining ACE, TAO, and CIAO</H3>
+  <H3>Obtaining ACE, TAO, CIAO, and DAnCE</H3>
 
-Welcome to the download page for ACE, TAO, and CIAO, which are
+Welcome to the download page for ACE, TAO, CIAO, and DAnCE which are
 open-source middleware developed by the <A
 HREF="http://www.dre.vanderbilt.edu/">DOC group</a> that provide that
 following capabilities:
@@ -45,14 +45,20 @@ framework.
 CORBA Component Model (CCM) built on top of TAO. </P>
 </LI>
 
+
+<LI> <A HREF="http://www.cs.wustl.edu/~schmidt/CIAO.html">DAnCE</a>
+is an open-source implementation of the
+Deployment and Configuration standard (D&C) built on top of TAO. </P>
+</LI>
+
 <A
 HREF="http://www.cs.wustl.edu/~schmidt/commercial-support.html">Commercial
-support and pre-built versions</A> of ACE, TAO, and CIAO are available
+support and pre-built versions</A> of ACE, TAO, CIAO, and DAnCE are available
 from a number of companies.  <P>
 
 <HR>
 
-  <H3>Downloading Freely Available Versions of ACE, TAO, and CIAO</H3>
+  <H3>Downloading Freely Available Versions of ACE, TAO, CIAO, and DAnCE</H3>
 
 <P>
 
@@ -66,7 +72,7 @@ case.  You may want to understand the DOC group's <A
 HREF="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/ACE/docs/ACE-bug-process.html?revision=HEAD">
 bug fixing policies</A> when you make this decision.  </P>The full
 packages do contain all sources with pre generated makefiles for GNU
-make, Visual C++ 8.0/9.0, and GNU autoconf. The
+make, Visual C++ 8.0/9.0/10.0, and GNU autoconf. The
 sources-only packages just contain the source code, you have to generate
 your own makefiles with MPC.  </P>
 <P>
@@ -84,101 +90,128 @@ of the ACE, TAO, and CIAO micro release kit is available for
   <TR><TH>Filename</TH><TH>Description</TH><TH>Full</TH><TH>Sources only</TH></TR>
   <TR><TD>ACE+TAO+CIAO.tar.gz</TD>
       <TD>ACE+TAO+CIAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.2.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.2.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.3.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.3.tar.gz">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.2.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.2.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.3.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.3.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO+CIAO.tar.bz2</TD>
       <TD>ACE+TAO+CIAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.2.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.2.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.3.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.3.tar.bz2">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.2.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.2.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.3.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.3.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO+CIAO.zip</TD>
       <TD>ACE+TAO+CIAO (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.2.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.2.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.3.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.3.zip">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.2.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.2.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.3.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.3.zip">FTP</A>]
+      </TD>
+  </TR>
+  <TR><TD>ACE+TAO+DAnCE.tar.gz</TD>
+      <TD>ACE+TAO+DAnCE (tar+gzip format)</TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-5.8.3.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-5.8.3.tar.gz">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-src-5.8.3.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-src-5.8.3.tar.gz">FTP</A>]
+      </TD>
+  </TR>
+  <TR><TD>ACE+TAO+DAnCE.tar.bz2</TD>
+      <TD>ACE+TAO+DAnCE (tar+bzip2 format)</TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-5.8.3.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-5.8.3.tar.bz2">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-src-5.8.3.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-src-5.8.3.tar.bz2">FTP</A>]
+      </TD>
+  </TR>
+  <TR><TD>ACE+TAO+DAnCE.zip</TD>
+      <TD>ACE+TAO+DAnCE (zip format)</TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-5.8.3.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-5.8.3.zip">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-src-5.8.3.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+DAnCE-src-5.8.3.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO.tar.gz</TD>
       <TD>ACE+TAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.2.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.2.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.3.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.3.tar.gz">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.2.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.2.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.3.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.3.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO.tar.bz2</TD>
       <TD>ACE+TAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.2.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.2.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.3.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.3.tar.bz2">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.2.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.2.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.3.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.3.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO.zip</TD>
       <TD>ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.2.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.2.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.3.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.3.zip">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.2.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.2.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.3.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.3.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-html.tar.gz</TD>
       <TD>Doxygen documentation for ACE+TAO+CIAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.2.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.2.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.3.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.3.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-html.tar.bz2</TD>
       <TD>Doxygen documentation for ACE+TAO+CIAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.2.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.2.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.3.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.3.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-html.zip</TD>
       <TD>Doxygen documentation for ACE+TAO+CIAO (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.2.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.2.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.3.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.3.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE.tar.gz</TD>
       <TD>ACE only (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.2.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.2.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.3.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.3.tar.gz">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.2.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.2.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.3.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.3.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE.tar.bz2</TD>
       <TD>ACE only (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.2.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.2.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.3.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.3.tar.bz2">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.2.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.2.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.3.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.3.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE.zip</TD>
       <TD>ACE only (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.2.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.2.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.3.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.3.zip">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.2.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.2.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.3.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.3.zip">FTP</A>]
       </TD>
   </TR>
 </TABLE>
@@ -409,16 +442,16 @@ the links below to download it.
   distributed after ACE+TAO-5.2+1.2.
 </P>
 
-  <H3>Other Sources for ACE+TAO+CIAO</H3>
+  <H3>Other Sources for ACE+TAO+CIAO+DAnCE</H3>
 
 <UL>
-  <LI>The ACE+TAO+CIAO Subversion repository can be browsed
+  <LI>The ACE+TAO+CIAO+DAnCE Subversion repository can be browsed
     <A HREF="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/">
       via the web</A>.
   </LI>
-  <li>ACE+TAO+CIAO source code may be obtained from the
+  <li>ACE+TAO+CIAO+DAnCE source code may be obtained from the
     <a href="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/ACE/ACE-INSTALL.html?revision=HEAD#power">Subversion repository</a>.</li>
-  <LI>Commercially supported versions of ACE+TAO+CIAO are available from
+  <LI>Commercially supported versions of ACE+TAO+CIAO+DAnCE are available from
     <A HREF="http://www.dre.vanderbilt.edu/support.html">several companies</A>.
   <LI>RPMs for CentOS, Fedora, Mandriva, RHEL, SLE, and OpenSuSe are available from the
     <A HREF="http://software.opensuse.org/search">OpenSuSE build service</A>.
@@ -426,15 +459,10 @@ the links below to download it.
       RPMs</A> for ACE and TAO.
 </UL><P>
 
-The GNU autoconf support for ACE and TAO should work fine
-"out-of-the-box."  The autoconf support for CIAO is not yet complete,
-so we recommend avoiding it and using the alternative build mechanism.
-We are interested in getting help to finish CIAO autoconf support so
-it you want to help us improve CIAO's autoconf support please contact
-<A
-HREF="mailto:d.schmidt@vanderbilt.edu">d.schmidt@vanderbilt.edu</A>.
+The GNU autoconf support for ACE should work fine
+"out-of-the-box.".
 Naturally, if you run into problems with the use of autoconf in ACE
-and TAO please submit a <A
+please submit a <A
 HREF="http://www.dre.vanderbilt.edu/~schmidt/DOC_ROOT/ACE/docs/ACE-bug-process.html">bug
 report</A>.
 
